# python-labs

./: .gitignore  README.md  guessing_game.py  main.py  pyproject.toml
src/: __init__.py  guessing_game.py  hangman_game.py
src/hangman/: __init__.py  game.py  main.py  ui.py  utils.py  wordlist.py
src/rock_paper_scissors/: __init__.py  game.py  main.py  ui.py  utils.py
tests/: conftest.py  test_game.py  test_utils.py  test_wordlist.py
